--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-welcome
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index - 16Personalities</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+
+<div class="index_header">
+    <img src="images/logo.svg" alt="">
+</div>
+<div class="welcome">
+    <p>“It’s so incredible to finally be understood.”</p>
+    <p>Only 10 minutes to get a “freakishly accurate” description of who you are and why you do things the way you do.</p>
+</div>
+<img src="images/header-mountains-mobile.svg" alt="">
+
+<div class="index_body">
+
+    <div class="index_body_title">
+<!--        <h4>Personality Test</h4>-->
+<!--        <p>The most popular MBTI test</p>-->
+        <dl>
+            <div>
+                <dt style="color: #4298b4">24K+</dt>
+                <dd>Tests taken today</dd>
+            </div>
+            <div>
+                <dt style="color: #e4ae3a">161M+</dt>
+                <dd>Tests taken in United States</dd>
+            </div>
+            <div>
+                <dt style="color: #33a474">1235M+</dt>
+                <dd>Total tests taken</dd>
+            </div>
+            <div>
+                <dt style="color: #88619a">91.2%</dt>
+                <dd>Results rated as accurate or very accurate</dd>
+            </div>
+        </dl>
+    </div>
+    <div class="index_body_hydrateds">
+        <button class="question-set-btn" data-set="set1">
+            <div class="icon"></div>
+            <p>48 Qs</p>
+            <p>Basic</p>
+            <p>3.5073 M</p>
+            <p>tests last</p>
+            <p>month</p>
+        </button>
+        <button class="question-set-btn" data-set="set2" style="width:34%">
+            <div class="icon"></div>
+            <p>93 Qs</p>
+            <p>Professional</p>
+            <p>1.578 M</p>
+            <p>tests last</p>
+            <p>month</p>
+        </button>
+        <button class="question-set-btn" data-set="set3">
+            <div class="icon"></div>
+            <p>141 Qs</p>
+            <p>Flagship</p>
+            <p>8.474 M</p>
+            <p>tests last</p>
+            <p>month</p>
+        </button>
+    </div>
+    <button id="start-test" disabled><span>Take the Test</span></button>
+    <div class="index_body_text">
+        <h3>Overview of MBTI Theory</h3>
+        <p>Swiss psychologist Carl Jung believed that perception and judgment are the two fundamental functions of the mind. The moment the mind makes a decision can be broken down into two stages: the perception stage (which is further divided into sensing and intuitive perception) and the judgment stage (which is further divided into feeling and thinking judgment).</p>
+        <img src="images/op1.png" alt="">
+        <p>For ease of understanding, we can intuitively imagine the process of the mind making a decision as follows: (after the brain acquires information) sensing perception — intuitive perception — feeling judgment — thinking judgment, and finally making a decision. However, please remember that in reality, this process is interwoven and occurs in an instant, rather than in the simple linear sequence imagined.</p>
+        <img src="images/op2.png" alt="">
+        <p>Although everyone’s mind goes through these four stages when making a decision, the degree of inclination toward each stage can vary among individuals (which can also be understood as differing durations of focus). Some people may tend to linger more in the sensing perception stage and quickly pass through intuitive perception, while others may spend more time in feeling judgment and quickly move through thinking judgment. Additionally, these two fundamental functions of the mind are also influenced by individual sources of energy and lifestyle differences (as proposed by American psychologist Katherine Cook Briggs), leading to a wide variety of final decisions.</p>
+        <p>After years of practice and continuous refinement, Jung’s personality classification theory has become the theoretical foundation for data-supported personality classification models internationally.</p>
+    </div>
+    <div class="index_body_text">
+        <h3>History of the MBTI</h3>
+        <p>1943 The first version of the MBTI® assessment was developed</p>
+        <p>1962 The Educational Testing Service (ETS) published the latest version of the MBTI® assessment.</p>
+        <p>1971 Isabel Myers and Mary McCaulley established the Center for the Study of Psychological Type at the University of Florida and created a central database.</p>
+        <p>1977 CPP published the original commercial version of the MBTI® assessment — Form G.</p>
+        <p>1979 The Association for Psychological Type (APT) was established. That same year, Research in Psychological Type was published, which later became the Psychological Type (JPT) journal, dedicated specifically to MBTI® research</p>
+        <p>1986 Katharine Myers and Margaret Hartzler launched the first CPP-approved MBTI® certification training program in Sydney, Australia</p>
+        <p>1997 OPP Ltd. (the UK distributor for the MBTI® assessment) released the European version of the MBTI Step I™ assessment after gathering extensive national data.</p>
+        <p>1998 After collecting extensive national data, CPP published the MBTI® Step I™ Form M assessment</p>
+        <p>2001 CPP published the MBTI® Step II™ Form Q assessment.</p>
+        <p>2001 Skill&Will™ became the officially authorized MBTI® certification training center for the Chinese region and introduced the Chinese versions of the Form G and Form K assessments, marking MBTI®'s official entry into the Chinese market.</p>
+        <p>2001 The world-renowned assessment organization Buros officially published evaluation reports for the MBTI® Step I™ and MBTI® Step II™ assessments</p>
+        <p>2003 Skill&Will™ officially introduced the Chinese version of the MBTI® Step I™ Form M assessment</p>
+        <p>2003 - 2007 OPP and CPP jointly researched and released a new version of the MBTI® Step II™, including European English and eight other European languages</p>
+        <p>2011 Skill&Will™ officially introduced the Chinese version of the MBTI® Step II™ Form Q assessment.</p>
+        <p>2016 Skill&Will™ successfully conducted 100 MBTI® Chinese certification training sessions in Mainland China and certified nearly 2,000 MBTI® practitioners.</p>
+        <p>2017 CPP officially revised the technical white papers for the Simplified Chinese versions of the MBTI® Step I™ and MBTI® Step II™ assessments</p>
+        <p>2018 Myers-Briggs released the international revised versions, namely the Global Step I™ and Global Step II™ assessments</p>
+    </div>
+</div>
+
+
+<script src="js/scripts.js"></script>
+</body>
+</html>
