--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>“It’s so incredible to finally be understood.”</p>
     <p>Only 10 minutes to get a “freakishly accurate” description of who you are and why you do things the way you do.</p>
 </div>
-<img src="images/header-mountains-mobile.svg" alt="">
+<img src="images/header-mountains-mobile.svg" alt="" style="width:100%">
 
 <div class="index_body">
 
