--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </dl>
     </div>
     <div class="index_body_hydrateds">
-        <button class="question-set-btn" data-set="set1">
+        <button class="question-set-btn selected1" data-set="set1">
             <div class="icon"></div>
             <p>48 Qs</p>
             <p>Basic</p>
@@ -69,7 +69,7 @@
             <p>month</p>
         </button>
     </div>
-    <button id="start-test" disabled><span>Take the Test</span></button>
+    <button id="start-test"><span>Take the Test</span></button>
     <div class="index_body_text">
         <h3>Overview of MBTI Theory</h3>
         <p>Swiss psychologist Carl Jung believed that perception and judgment are the two fundamental functions of the mind. The moment the mind makes a decision can be broken down into two stages: the perception stage (which is further divided into sensing and intuitive perception) and the judgment stage (which is further divided into feeling and thinking judgment).</p>
